# quant_backtest

./: .gitignore  .gitmessage  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  DAILY_SELECT_README.md  Makefile  README.md  RESEARCH_AGENT_UPGRADE.md  STRATEGY_GUIDE.md  USAGE.md  _run_full_pool.py  _run_missing.sh  _run_r9_full.py  _run_remaining.sh  _run_rs10_full.py  cross_pool_report.html  daily_select_pipeline.py  grid_search_volume_reversal_deep.json  grid_search_volume_reversal_fine.json  grid_search_volume_reversal_fine.jsonl  grid_search_volume_reversal_results.jsonl  ladder_comparison_results.json  latest_report.txt  merge_all_results.py  portfolio.json  pyproject.toml  report.py  run_all_reports.sh  run_cross_pool.sh  run_grid_search_fine.sh  run_ladder_comparison.py  run_pipeline.py  run_pool_comparison.py  run_research_optimize.py  run_save.py  run_volume_reversal_grid.py  start.sh  stock_pools.json  top_strategy.md
_archive/: README.md
analytics/: __init__.py  attribution.py  benchmark.py  capacity.py  common.py  correlation.py  extreme.py  factors.py  formatters.py  performance.py  risk.py  scenario.py  statistics.py  tca.py
backend/: backtest_engine.py  benchmark_data.py  data_loader.py  grid_search.py  indicator_demand.py  indicators.py  main.py  ml_bridge.py  ml_engine.py  parallel_engine.py  regime.py  requirements.txt  research_agent.py  research_bridge.py  state_machine.py  strategy_engine.py  survival_check.py
cross_pool_tmp/: TOP1_全量.json  TOP1_全量_0.json  TOP1_全量_3.json  TOP1_全量_68.json  TOP1_创业板.json  TOP1_创业板.json.err  TOP1_大蓝筹.json  (+14 more)
(+603 files in other folders)
